# byteplug

./: .gitlab.yml  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: github.yml
examples/: helloworld.rs  modules.rs  window.rs
src/: animation.rs  application.rs  audio.rs  geometry.rs  input.rs  lib.rs  renderer.rs  ui.rs  video.rs
src/animation/: animation.rs  animator.rs  frame_animation.rs  mod.rs  move_animation.rs  resize_animation.rs  rotate_animation.rs  scale_animation.rs  skeleton_animation.rs  timeline.rs
src/application/: application.rs  event_loop.rs  mod.rs  window.rs
src/audio/: mod.rs
src/controller/: gamepad.rs  keyboard.rs  mod.rs  mouse.rs  sensor.rs  tablet.rs  touchpad.rs  touchscreen.rs
src/draw/: context.rs  default_shader.rs  drawable.rs  font.rs  glyph.rs  mod.rs  options.rs  primitive.rs  shader.rs  shape.rs  surface.rs  text.rs  texture.rs  uniform.rs  usage.rs  vertex.rs  vertex_array.rs  view.rs
src/draw/shapes/: circle.rs  line.rs  mod.rs  point.rs  polygon.rs  triangle.rs
src/game/: mod.rs  skeleton.rs  sprite.rs
src/geometry/: box_.rs  circle.rs  line.rs  matrix.rs  mod.rs  movable.rs  point.rs  position.rs  rectangle.rs  resizable.rs  rotable.rs  scalable.rs  size.rs  transform.rs  transformable.rs  transformer.rs  utils.rs  vector.rs
src/image/: color.rs  gradient.rs  image.rs  mod.rs
src/input/: mod.rs  mouse.rs  touch.rs
src/renderer/: color.rs  context.rs  glyph.rs  image.rs  mod.rs  renderable.rs  renderer.rs  surface.rs
src/renderer/shapes/: circle.rs  line.rs  triangle.rs
src/ui/: layout.rs  mod.rs
src/video/: mod.rs
src/widget/: component.rs  layout.rs  mod.rs  widget.rs
