[package]
name = "distillate"
description = "Distilled Multimedia Library"
version = "0.1.0"

authors = ["Jonathan De Wachter <dewachter.jonathan@gmail.com>"]
license = "MIT"
keywords = ["distillate", "distilled", "multimedia", "library", "application", "game", "desktop", "mobile"]
categories = ["os", "mathematics", "rendering", "multimedia", "gui", "game-engines"]

homepage = "https://byteplug.io/distillate"
repository = "https://code.intjelic.me/byteplug/distillate"
readme = "README.md"

edition = "2018"

# keep the crate from being published until it reaches decent usability
publish = false

[dependencies]
glutin = "0.22.0-alpha4"

[build-dependencies]
gl_generator = "0.5.0"