[package]
name = "byteplug"
description = "Minimalistic Multimedia Library"
version = "0.0.1"

authors = ["Jonathan De Wachter <dewachter.jonathan@gmail.com>"]
license = "MIT"
keywords = ["byteplug", "minimalistic", "multimedia", "library", "game"]
categories = ["os", "mathematics", "rendering", "multimedia", "gui"]

homepage = "https://www.intjelic.me/project/byteplug"
repository = "https://github.com/intjelic/byteplug"
readme = "README.md"

edition = "2018"

[dependencies]
winit = "0.22.2"
glutin = "0.24"

[build-dependencies]
gl_generator = "0.5.0"
